Revamp design with modern styles

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             </ul>
         </nav>
     </header>
+    <section class="hero">
+        <h2>Witaj w świecie satyry i humoru</h2>
+    </section>
     <main>
         <section id="wstep" contenteditable="false">
             <h2>Witajcie!</h2>
