--- a/tworczosc.html
+++ b/tworczosc.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Krzysztof Daukszewicz - Tworczosc</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/script.js"></script>
@@ -10,6 +11,7 @@
 <body>
     <header>
         <h1>Krzysztof Daukszewicz</h1>
+        <button class="menu-toggle" aria-label="Menu">&#9776;</button>
         <nav>
             <ul>
                 <li><a href="index.html">Strona główna</a></li>
