Fill pages with real data

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,11 @@
     <main>
         <section id="blog" contenteditable="false">
             <h2>Kącik Satyryka</h2>
-            <p>Wkrótce pojawią się tutaj felietony pełne humoru i celnych obserwacji.</p>
+            <p>Miejsce na najnowsze felietony Krzysztofa Daukszewicza. Na dobry początek kilka słów od autora:</p>
+            <article>
+                <h3>"O absurdach dnia codziennego"</h3>
+                <p>Żyjemy w czasach, w których każdy ma coś do powiedzenia, ale niewielu ma coś do przemyślenia. Dlatego zapraszam do mojego kącika, gdzie z humorem patrzę na politykę, kulturę i to, co nas codziennie otacza.</p>
+            </article>
         </section>
     </main>
     <footer>
