--- a/cytaty.html
+++ b/cytaty.html
@@ -34,6 +34,12 @@
             <blockquote>
                 "Polityk – osoba, która potrafi godzinami mówić bez powiedzenia czegokolwiek istotnego."
             </blockquote>
+            <blockquote>
+                "Urlop to czas, gdy odpoczywasz tak intensywnie, że potrzebujesz kolejnego urlopu."
+            </blockquote>
+            <blockquote>
+                "W Polsce rzeczy niemożliwe załatwiam od ręki, na cuda trzeba chwilę poczekać." 
+            </blockquote>
         </section>
     </main>
     <footer>
