--- a/daukszopedia.html
+++ b/daukszopedia.html
@@ -34,6 +34,8 @@
             <p>Humorystyczna encyklopedia pojęć Daukszewicza.</p>
             <ul>
                 <li><strong>Urlop</strong> – okres, gdy odpoczywasz tak intensywnie, że potrzebujesz kolejnego urlopu.</li>
+                <li><strong>Polityk</strong> – ktoś, kto potrafi mówić długo i nie powiedzieć nic konkretnego.</li>
+                <li><strong>Prawda czasu</strong> – chwila, w której wszyscy zapominają, o co naprawdę chodziło.</li>
             </ul>
         </section>
     </main>
