--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </section>
         <section id="bio" contenteditable="false">
             <h2>Krótka notka biograficzna</h2>
-            <p>Krzysztof Daukszewicz – satyryk, felietonista, poeta, kompozytor i wykonawca piosenki autorskiej. Zadebiutował w latach 70. w kabarecie "Pod Egidą" i od tego czasu nieprzerwanie komentuje rzeczywistość z humorem.</p>
+            <p>Krzysztof Daukszewicz (ur. 30 października 1947 w Wichrowie na Mazurach) to satyryk, felietonista i kompozytor. W latach 70. debiutował w kabarecie "Pod Egidą", a od 2005 roku współprowadzi program "Szkło kontaktowe" w TVN24.</p>
         </section>
         <section id="wydarzenia" contenteditable="false">
             <h2>Aktualne wydarzenia</h2>
             <ul>
-                <li>25 czerwca 2025 – występ w Warszawie</li>
-                <li>10 lipca 2025 – spotkanie autorskie w Krakowie</li>
-                <li>15 sierpnia 2025 – recital w Gdańsku</li>
+                <li>5 września 2025 – koncert w Teatrze Muzycznym w Gdyni</li>
+                <li>20 października 2025 – wieczór autorski w Poznaniu</li>
+                <li>12 listopada 2025 – występ w Warszawie, Klub Hybrydy</li>
             </ul>
         </section>
     </main>
