--- a/materialy.html
+++ b/materialy.html
@@ -32,7 +32,8 @@
         <section id="press" contenteditable="false">
             <h2>Materiały prasowe</h2>
             <p>Biogram i zdjęcia do pobrania poniżej.</p>
-            <a href="#">Pobierz pakiet prasowy</a>
+            <a href="https://upload.wikimedia.org/wikipedia/commons/6/68/Krzysztof_Daukszewicz_2011.jpg">Pobierz zdjęcie w wysokiej rozdzielczości</a>
+            <p><a href="#">Pobierz pełny pakiet prasowy</a></p>
         </section>
     </main>
     <footer>
