--- a/multimedia.html
+++ b/multimedia.html
@@ -31,7 +31,9 @@
     <main>
         <section id="multimedia" contenteditable="false">
             <h2>Galeria zdjęć i wideo</h2>
-            <p>Tu pojawią się zdjęcia z koncertów i wywiadów.</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Krzysztof_Daukszewicz_2011.jpg" alt="Krzysztof Daukszewicz" style="max-width:100%;border-radius:8px;">
+            <p>Poniżej fragment występu z programu "Szkło kontaktowe".</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/jNdb3iwrKyY" title="Występ Krzysztofa Daukszewicza" frameborder="0" allowfullscreen></iframe>
         </section>
     </main>
     <footer>
