--- a/o-artyscie.html
+++ b/o-artyscie.html
@@ -31,9 +31,9 @@
     <main>
         <section id="bio" contenteditable="false">
             <h2>Biografia</h2>
-            <p>Krzysztof Daukszewicz (ur. 30 października 1947 w Wichrowie) to polski satyryk, felietonista, poeta oraz kompozytor. Ukończył Wyższą Szkołę Pedagogiczną w Olsztynie. Na scenie zadebiutował w latach 70. i szybko zdobył popularność w kabarecie "Pod Egidą".</p>
-            <p>Jest autorem licznych książek i płyt z autorskimi piosenkami. Jego teksty komentują bieżące wydarzenia w sposób celny i dowcipny. Od 2005 roku współprowadzi program "Szkło kontaktowe" w TVN24.</p>
-            <p>Znany z ciętego humoru i trafnych obserwacji, od lat bawi publiczność zarówno podczas występów scenicznych, jak i w radiu czy telewizji.</p>
+            <p>Krzysztof Daukszewicz (ur. 30 października 1947 w Wichrowie na Mazurach) to polski satyryk, felietonista, poeta i kompozytor. Ukończył Wyższą Szkołę Pedagogiczną w Olsztynie, a swoją karierę zaczynał w kabarecie studenckim "Gwuść".</p>
+            <p>W latach 70. występował w kabarecie "Pod Egidą" Jana Pietrzaka, gdzie powstały jego pierwsze znane skecze i piosenki. Od tego czasu nagrał kilkanaście płyt i napisał kilka książek satyrycznych. Jego felietony regularnie pojawiają się w prasie i radiu.</p>
+            <p>Od 2005 roku jest komentatorem i współprowadzącym programu "Szkło kontaktowe" w TVN24. Charakteryzuje go cięty dowcip i umiejętność komentowania codzienności z przymrużeniem oka.</p>
         </section>
     </main>
     <footer>
