--- a/tworczosc.html
+++ b/tworczosc.html
@@ -31,9 +31,9 @@
         <section id="tworczosc" contenteditable="false">
             <h2>Tworczość i publikacje</h2>
             <ul>
-                <li>Książka "Satyryczne spojrzenie"</li>
-                <li>Książka "Idiotopedia"</li>
-                <li>Album "Z prądem i pod prąd"</li>
+                <li>"Idiotopedia" (książka, 2012)</li>
+                <li>"Meneliki nowe, czyli Alfabet wspomnień" (książka)</li>
+                <li>"Dusza na ramieniu" (album muzyczny)</li>
             </ul>
         </section>
     </main>
