--- a/wystepy.html
+++ b/wystepy.html
@@ -33,8 +33,9 @@
             <h2>Kalendarz wystepow</h2>
             <p>Tutaj znajdziesz daty przyszlych i archiwalnych wystepow.</p>
             <ul>
-                <li>25 czerwca 2025 – Warszawa</li>
-                <li>10 lipca 2025 – Krakow</li>
+                <li>5 września 2025 – Teatr Muzyczny, Gdynia</li>
+                <li>20 października 2025 – Aula UAM, Poznań</li>
+                <li>12 listopada 2025 – Klub Hybrydy, Warszawa</li>
             </ul>
         </section>
     </main>
