Add dynamic quote and event filtering

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <section class="hero" aria-label="Krzysztof Daukszewicz">
         <h2>Witaj w świecie, w którym codzienność inspiruje do żartów</h2>
     </section>
+        <section id="statystyki" class="stats" contenteditable="false">
+            <div><strong>50</strong><span>lat kariery</span></div>
+            <div><strong>10</strong><span>publikacji</span></div>
+            <div><strong>18</strong><span>lat w TV</span></div>
+        </section>
     <main>
         <section id="wstep" contenteditable="false">
             <h2>Witajcie!</h2>
@@ -48,6 +53,11 @@
                 <li>20 października 2025 – wieczór autorski w Poznaniu</li>
                 <li>12 listopada 2025 – występ w Warszawie, Klub Hybrydy</li>
             </ul>
+        </section>
+        <section id="cytat" contenteditable="false">
+            <h2>Cytat dnia</h2>
+            <blockquote id="cytatDnia"></blockquote>
+            <button id="quoteBtn">Pokaż inny</button>
         </section>
     </main>
     <footer>
