--- a/o-artyscie.html
+++ b/o-artyscie.html
@@ -34,6 +34,13 @@
             <p>Krzysztof Daukszewicz (ur. 30 października 1947 w Wichrowie na Mazurach) to polski satyryk, felietonista, poeta i kompozytor. Ukończył Wyższą Szkołę Pedagogiczną w Olsztynie, a swoją karierę zaczynał w kabarecie studenckim "Gwuść".</p>
             <p>W latach 70. występował w kabarecie "Pod Egidą" Jana Pietrzaka, gdzie powstały jego pierwsze znane skecze i piosenki. Od tego czasu nagrał kilkanaście płyt i napisał kilka książek satyrycznych. Jego felietony regularnie pojawiają się w prasie i radiu.</p>
             <p>Od 2005 roku jest komentatorem i współprowadzącym programu "Szkło kontaktowe" w TVN24. Charakteryzuje go cięty dowcip i umiejętność komentowania codzienności z przymrużeniem oka.</p>
+            <ul class="timeline">
+                <li><span class="year">1947</span> Urodził się w Wichrowie na Mazurach.</li>
+                <li><span class="year">1970</span> Związał się z kabaretem Pod Egidą.</li>
+                <li><span class="year">1980-1990</span> Publikacje "Listy do Pana Hrabiego".</li>
+                <li><span class="year">2005</span> Rozpoczął współpracę przy programie "Szkło kontaktowe".</li>
+                <li><span class="year">2024</span> Nowe projekty satyryczne i występy solowe.</li>
+            </ul>
         </section>
     </main>
     <footer>
